Add form for client creation

--- a/Frontend/src/app/components/client-list/client-list.component.css
+++ b/Frontend/src/app/components/client-list/client-list.component.css
@@ -1,6 +1,13 @@
 .container {
     padding: 10px;
 
+    .container-head {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        align-items: center;
+    }
+
     .mat-mdc-table {
         border-radius: 8px;
         overflow: hidden !important;
