--- a/Frontend/src/app/components/dialogs/client-create-dialog/client-create-dialog.component.scss
+++ b/Frontend/src/app/components/dialogs/client-create-dialog/client-create-dialog.component.scss
@@ -7,4 +7,13 @@ form {
     grid-template-columns: repeat(2, 1fr);
     // add space between columns
     column-gap: 10px;
+
+    input.currency {
+        text-align: right;
+
+        ::-webkit-outer-spin-button,
+        ::-webkit-inner-spin-button {
+            display: none;
+        }
+    }
 }
