--- a/Frontend/src/app/components/dialogs/client-create-dialog/client-create-dialog.component.html
+++ b/Frontend/src/app/components/dialogs/client-create-dialog/client-create-dialog.component.html
@@ -1,21 +1,24 @@
-<h1 mat-dialog-title>Новый клиент</h1>
+<h1 mat-dialog-title>
+    @if (client) {
+        {{ client.firstName }} {{ client.lastName }}
+    } @else {
+        Новый клиент
+    }
+</h1>
 <div mat-dialog-content>
     <form [formGroup]="form">
         <mat-form-field>
             <mat-label>Фамилия</mat-label>
             <input matInput formControlName="lastName" />
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Имя</mat-label>
             <input matInput formControlName="firstName" />
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Отчество</mat-label>
             <input matInput formControlName="patronymic" />
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>День рождения</mat-label>
             <input
@@ -30,7 +33,6 @@
             ></mat-datepicker-toggle>
             <mat-datepicker #birthdayPickerElement></mat-datepicker>
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Пол</mat-label>
             <mat-select formControlName="sex">
@@ -41,7 +43,6 @@
                 }
             </mat-select>
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Паспорт</mat-label>
             <input
@@ -50,7 +51,6 @@
                 formControlName="passport"
             />
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Дата выдачи паспорта</mat-label>
             <input
@@ -65,22 +65,18 @@
             ></mat-datepicker-toggle>
             <mat-datepicker #issueDatePicker></mat-datepicker>
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Кем выдан</mat-label>
             <input matInput formControlName="passportIssuer" />
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Идентификационный номер</mat-label>
             <input matInput formControlName="identificationNumber" />
         </mat-form-field>
-
         <mat-form-field>
             <mat-label>Место рождения</mat-label>
             <input matInput formControlName="birthPlace" />
         </mat-form-field>
-        <!-- Living city-->
         <mat-form-field>
             <mat-label>Город проживания</mat-label>
             <mat-select formControlName="livingCity">
@@ -91,37 +87,30 @@
                 }
             </mat-select>
         </mat-form-field>
-        <!-- Living address-->
         <mat-form-field>
             <mat-label>Адрес проживания</mat-label>
             <input matInput formControlName="livingAddress" />
         </mat-form-field>
-        <!-- Home phone number-->
         <mat-form-field>
             <mat-label>Телефон домашний</mat-label>
             <input matInput type="text" formControlName="homePhoneNumber" />
         </mat-form-field>
-        <!-- Phone number-->
         <mat-form-field>
             <mat-label>Телефон мобильный</mat-label>
             <input matInput type="text" formControlName="phoneNumber" />
         </mat-form-field>
-        <!-- Email-->
         <mat-form-field>
             <mat-label>E-mail</mat-label>
             <input matInput type="email" formControlName="email" />
         </mat-form-field>
-        <!-- Work place-->
         <mat-form-field>
             <mat-label>Место работы</mat-label>
             <input matInput formControlName="workPlace" />
         </mat-form-field>
-        <!-- Position-->
         <mat-form-field>
             <mat-label>Должность</mat-label>
             <input matInput formControlName="position" />
         </mat-form-field>
-        <!-- registration city-->
         <mat-form-field>
             <mat-label>Город прописки</mat-label>
             <mat-select formControlName="registrationCity">
@@ -132,12 +121,10 @@
                 }
             </mat-select>
         </mat-form-field>
-        <!-- registration address-->
         <mat-form-field>
             <mat-label>Адрес прописки</mat-label>
             <input matInput formControlName="registrationAddress" />
         </mat-form-field>
-        <!-- marital status-->
         <mat-form-field>
             <mat-label>Семейное положение</mat-label>
             <mat-select formControlName="maritalStatus">
@@ -148,7 +135,6 @@
                 }
             </mat-select>
         </mat-form-field>
-        <!-- citizenship-->
         <mat-form-field>
             <mat-label>Гражданство</mat-label>
             <mat-select formControlName="citizenship">
@@ -159,7 +145,6 @@
                 }
             </mat-select>
         </mat-form-field>
-        <!-- disability group-->
         <mat-form-field>
             <mat-label>Инвалидность</mat-label>
             <mat-select formControlName="disabilityGroup">
@@ -170,9 +155,7 @@
                 }
             </mat-select>
         </mat-form-field>
-        <!-- is retired-->
         <mat-checkbox formControlName="isRetired">Пенсионер?</mat-checkbox>
-        <!-- salary-->
         <mat-form-field>
             <mat-label>Ежемесячный доход</mat-label>
             <input
@@ -183,7 +166,6 @@
             />
             <span matTextPrefix>$&nbsp;</span>
         </mat-form-field>
-        <!-- isLiableForMilitaryService-->
         <mat-checkbox formControlName="isLiableForMilitaryService"
             >Военнообязанный?</mat-checkbox
         >
@@ -193,9 +175,13 @@
     <button mat-button (click)="close()">Отмена</button>
     <button
         mat-button
-        [disabled]="false && (form.invalid || inProcess())"
+        [disabled]="form.invalid || inProcess()"
         (click)="create()"
     >
-        Создать
+        @if (client) {
+            Изменить
+        } @else {
+            Создать
+        }
     </button>
 </div>
