Changed sex form field name to gender

--- a/Frontend/src/app/components/dialogs/client-create-dialog/client-create-dialog.component.html
+++ b/Frontend/src/app/components/dialogs/client-create-dialog/client-create-dialog.component.html
@@ -35,7 +35,7 @@
         </mat-form-field>
         <mat-form-field>
             <mat-label>Пол</mat-label>
-            <mat-select formControlName="sex">
+            <mat-select formControlName="gender">
                 @for (option of sexOptions; track option.value) {
                     <mat-option [value]="option.value">
                         {{ option.name }}
