Converted first lab to graphql

--- a/Frontend/src/app/components/client-list/client-list.component.html
+++ b/Frontend/src/app/components/client-list/client-list.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <table
-        [dataSource]="clients()"
+        [dataSource]="clients"
         mat-table
         matSort
         (matSortChange)="sortData($event)"
