--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <app-navigation />
+    <div class="wrapper">
+        <router-outlet></router-outlet>
+    </div>
+</div>
