--- a/Frontend/src/app/components/deposit-list/deposit-list.component.html
+++ b/Frontend/src/app/components/deposit-list/deposit-list.component.html
@@ -41,6 +41,26 @@
             </td>
         </ng-container>
 
+        <ng-container matColumnDef="actions">
+            <th
+                *matHeaderCellDef
+                mat-header-cell
+                mat-sort-header
+                class="actions-column"
+            ></th>
+            <td *matCellDef="let element" mat-cell class="actions-column">
+                @if (element.deposit.isRevocable) {
+                    <button
+                        mat-button
+                        mat-raised-button
+                        (click)="withdraw(element.id)"
+                    >
+                        Отозвать
+                    </button>
+                }
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let client; columns: displayedColumns"></tr>
     </table>
