--- a/Frontend/src/app/components/transaction-list/transaction-list.component.html
+++ b/Frontend/src/app/components/transaction-list/transaction-list.component.html
@@ -36,7 +36,7 @@
         <ng-container matColumnDef="date">
             <th *matHeaderCellDef mat-header-cell>Дата</th>
             <td *matCellDef="let element" mat-cell>
-                {{ element.date | date: 'dd.MM.yyyy г.' }}
+                {{ element.date | date: 'dd.MM.yyyy HH:mm:ss.SSS' }}
             </td>
         </ng-container>
 
