--- a/Frontend/src/app/components/navigation/navigation.component.html
+++ b/Frontend/src/app/components/navigation/navigation.component.html
@@ -1,10 +1,12 @@
 <nav class="container">
     <h2 class="logo"><a routerLink="">BG</a></h2>
     <ul>
-        <li><a [routerLink]="'clients'">Клиенты</a></li>
-        <li><a [routerLink]="'plans'">Депозитные планы</a></li>
-        <li><a [routerLink]="'deposits'">Активные депозиты</a></li>
-        <li><a [routerLink]="'accounts'">Счета</a></li>
-        <li><a [routerLink]="'transactions'">Транзакции</a></li>
+        <li><a routerLink="clients">Клиенты</a></li>
+        <li><a routerLink="deposit-plans">Депозитные планы</a></li>
+        <li><a routerLink="deposits">Активные депозиты</a></li>
+        <li><a routerLink="credit-plans">Кредитные планы</a></li>
+        <li><a routerLink="credits">Активные кредиты</a></li>
+        <li><a routerLink="accounts">Счета</a></li>
+        <li><a routerLink="transactions">Транзакции</a></li>
     </ul>
 </nav>
