--- a/Frontend/src/app/components/navigation/navigation.component.html
+++ b/Frontend/src/app/components/navigation/navigation.component.html
@@ -8,5 +8,6 @@
         <li><a routerLink="credits">Активные кредиты</a></li>
         <li><a routerLink="accounts">Счета</a></li>
         <li><a routerLink="transactions">Транзакции</a></li>
+        <li><a routerLink="cards">Карты</a></li>
     </ul>
 </nav>
