--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -3,3 +3,30 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.column-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.equal-width {
+    width: 100%;
+    & > * {
+        width: 100%;
+    }
+}
+
+.auto-width {
+    width: auto;
+}
+
+.center {
+    align-items: center;
+}
+
+span.error {
+    color: red;
+}
+
