--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,8 +1,11 @@
-<div class="container">
+<div class="panel">
     <h1>BG Bank</h1>
     <h6>Bondar & Guydo</h6>
 
     <div class="column">
+        <button mat-button mat-raised-button (click)="openAtm()">
+            Банкомат
+        </button>
         <button mat-button mat-raised-button (click)="closeBankDays(1)">
             Закрыть банковский день
         </button>
