--- a/Frontend/src/app/components/home/home.component.scss
+++ b/Frontend/src/app/components/home/home.component.scss
@@ -1,4 +1,13 @@
 .container {
+    height: 100vh;
+
+    .wrapper {
+        padding-top: 60px;
+        height: 100%;
+    }
+}
+
+.panel {
     display: flex;
     flex-direction: column;
     align-items: center;
