--- a/Frontend/src/app/components/navigation/navigation.component.html
+++ b/Frontend/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <nav class="container">
-    <h2 class="logo"><a routerLink="">BG</a></h2>
+    <h2 class="logo"><a routerLink="">B&amp;G</a></h2>
     <ul>
         <li><a routerLink="clients">Клиенты</a></li>
         <li><a routerLink="deposit-plans">Депозитные планы</a></li>
