--- a/Frontend/src/app/components/credit-list/credit-list.component.html
+++ b/Frontend/src/app/components/credit-list/credit-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="container-head">
-        <h2>Активные депозиты</h2>
+        <h2>Активные кредиты</h2>
 
         <button mat-button mat-raised-button (click)="createCredit()">
             Добавить
